Fix New UX related bugs for Alerts, BucketList and Abort Upload modal (#5694)
- Center text on Alert component appearing on top
- Change "Upload" to "Continue" on New UX Abort Upload modal
- Fix issue where long bucket names were overflowing instead of
continuing on the next line
- Fix word wrap issue similar to the last one for the alerts that appear
on top
- Help fix the cluttering issue on #5690 as the right margin has been
increased in alerts

Fixes #5689, #5691 and #5695

--- a/browser/app/less/inc/alert.less
+++ b/browser/app/less/inc/alert.less
@@ -3,13 +3,15 @@
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
     color: @white;
     width: 100%;
-    padding: 1.5rem 3rem 1.5rem 2rem;
+    padding: 1.5rem 4rem 1.5rem 2rem;
     z-index: 1000000;
     .animation-duration(800ms);
     .animation-fill-mode(both);
     font-size: @font-size-small;
+    word-wrap: break-word;
 
     &:not(.alert--upload) {
+        text-align: center;
         top: 1.5rem;
         max-width: 500px;
         border-radius: @border-radius-base;
@@ -22,7 +24,7 @@
 
     @media(max-width: (@screen-xs-max)) {
         left: 1.5rem;
-        width: ~"calc(100% - 3rem)";
+        width: ~"calc(100% - 4rem)";
         max-width: 100%;
     }
 
