--- a/browser/app/less/inc/sidebar.less
+++ b/browser/app/less/inc/sidebar.less
@@ -88,10 +88,11 @@
 }
 
 .buckets__item {
-    padding: 0.8rem @sidebar-padding 0.8rem @sidebar-padding*2.2;
+    padding: 0.8rem @sidebar-padding*1.2 0.8rem @sidebar-padding*2.2;
     background: url(../../img/icons/bucket.svg) no-repeat left 2.2rem center;
     position: relative;
     cursor: pointer;
+    word-wrap: break-word;
 
     & > a {
         &, &:focus, &:hover {
